--- a/bower.json
+++ b/bower.json
@@ -3,8 +3,8 @@
   "version": "1.1.3",
   "main": "scripts/jquery.parallax.js",
   "dependencies": {
-    "jquery": "~1.8.3",
-    "jquery.scrollTo": "~1.4.6",
+    "jquery": "2.2.3",
+    "jquery.scrollTo": "*",
     "jquery.serialScroll": "*"
   },
   "ignore": [
